--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "phone-party",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "start": "node dist/server/",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "dev-node": "tsx watch src/server",
+    "build": "tsc && vite build && tsc -p tsconfig.server.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remult": "^0.22.8"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -22,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tsx": "^3.13.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
