--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "prepare": "tsx ./src/shared/GenerateUserAvatarLists.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
     "express": "^4.18.2",
     "phaser": "^3.60.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
     "remult": "^0.22.8",
-    "socket.io-client": "^4.7.2"
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.2",
+    "use-fit-text": "^2.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/simple-peer": "^9.11.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
