--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fantasy-name-generator": "^2.0.0",
     "phaser": "^3.60.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,14 +26,18 @@
     "react-router-dom": "^6.16.0",
     "remult": "^0.22.8",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "uniqid": "^5.4.0",
     "use-fit-text": "^2.4.0"
   },
   "devDependencies": {
+    "@types/config": "^3.3.1",
     "@types/express": "^4.17.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/simple-peer": "^9.11.6",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
