--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev-node": "tsx watch src/server",
     "dev-all": "concurrently \"npm run dev\" \"npm run dev-node\"",
     "build": "tsc && vite build && tsc -p tsconfig.server.json",
+    "build-client": "vite build",
+    "build-server": "tsc -p tsconfig.server.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "tsx ./src/shared/GenerateUserAvatarLists.ts"
