--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
