--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "use-fit-text": "^2.4.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@types/config": "^3.3.1",
     "@types/express": "^4.17.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/simple-peer": "^9.11.6",
+    "@types/socket.io": "^3.0.2",
     "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
