--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev-node": "tsx watch src/server",
     "dev-all": "concurrently \"npm run dev\" \"npm run dev-node\"",
     "client": "vite",
+    "client-host": "vite --host",
     "server": "tsx watch src/server",
     "build": "tsc && vite build && tsc -p tsconfig.server.json",
     "build-client": "vite build",
